<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".discussion.DiscussionActivity">

    <item android:id="@+id/action_save_task"
        android:title="SAVE"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

</menu>