<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".discussion.DiscussionActivity">

    <item android:id="@+id/action_new_task"
        android:title="share"
        android:icon="@drawable/ic_plus"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

</menu>